# dune-awakening-selfhost-docker-WSL

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .shellcheckrc  .trivyignore  ISSUE_74_UPSTREAM_CHECK.md  LICENSE  NOTICE  README.md  docker-compose.metrics.yml  docker-compose.web.yml  docker-compose.yml  install.ps1  install.sh  manual-stop.env
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  sync-placeholder
.github/ISSUE_TEMPLATE/: access-review.yml  bug-report.yml  config.yml  feature-request.yml  security-exception.yml  threat-remediation.yml  vulnerability-remediation.yml
.github/workflows/: discord-bot-security-gates.yml  sbom-generation.yml  security-gates.yml  semgrep-sast.yml  soc2-readiness-check.yml  stride-threat-scan.yml  trivy-vulnerability-scan.yml
admin-server/: Dockerfile  package-lock.json  package.json
admin-server/src/: adminCatalog.js  audit.js  carePackage.js  config.js  db.js  duneDb.js  redact.js  rmq.js  runner.js  server.js  statusParsers.js  tasks.js
admin-server/test/: adminCatalog.test.js  audit.test.js  carePackage.test.js  db.test.js  rmq.test.js  runner.test.js  statusParsers.test.js  tasks.test.js
console/api/: Dockerfile  package-lock.json  package.json
console/api/scripts/: apply-discord-server-hook.mjs  start-discord-adapter.mjs
console/api/src/: addonContentSecurity.js  addons.js  adminCatalog.js  audit.js  auth.js  carePackage.js  config.js  db.js  duneDb.js  grantResults.js  httpSafety.js  preflight.js  rateLimit.js  rmq.js  runner.js  server.js  sqlGuardrails.js  statusParsers.js  tasks.js
console/api/test/: addonContentSecurity.test.js  addons.test.js  adminCatalog.test.js  audit.test.js  auth.test.js  backupMetadata.test.js  carePackage.test.js  characterTransferSettings.test.js  config.test.js  db.test.js  discordAdapter.test.js  discordAudit.test.js  discordPolicy.test.js  discordRoutes.test.js  discordSanitize.test.js  discordStatusProvider.test.js  duneDbPresentation.test.js  grantResults.test.js  httpSafety.test.js  memoryBalancer.test.js  messageOfTheDay.test.js  metricsRoute.test.js  playerAnnouncements.test.js  preflight.test.js  prometheusRegistry.test.js  rateLimit.test.js  rmq.test.js  (+7 more)
console/web/: package-lock.json  package.json
discord-bot/: Dockerfile  README.md  docker-compose.discord-bot.yml  package-lock.json  package.json  tsconfig.json
discord-bot/scripts/: command-smoke.mjs  discord-discover.mjs  discord-formatters.mjs  discord-runtime.mjs  run-discord-runtime.sh  run-local-discord-stack.sh  runtime-smoke.mjs  validate-scaffold.mjs
discord-bot/src/: commands.ts  config.ts  consoleApi.ts  index.ts
discord-bot/test/: discord-formatters.test.mjs  redaction.test.mjs
docs/: ADMIN-POWERSHELL.md  ISSUE-74-CLEAN-REPRO.md  KPI-ANALYTICS-DECISION.md  METRICS-ROADMAP.md  OBSERVABILITY-AND-ANALYTICS-ARCHITECTURE.md  OBSERVABILITY-AND-ANALYTICS-DESIGN.md  OPS-METRICS-SPEC.md  R1-METRICS-STACK-IMPLEMENTATION-NOTES.md  RFC-ADDENDUM-ADDON-FIRST-OBSERVABILITY.md  RFC-OBSERVABILITY-AND-KPI-ANALYTICS.md  ROADMAP-OBSERVABILITY-ANALYTICS-TESTING-SECURITY.md  WINDOWS-WSL-INSTALL.md  WINDOWS-WSL-NETWORKING-AND-DOCKER-SOCKET.md  WINDOWS-WSL-QUICKSTART.md  WINDOWS-WSL-SECURITY-REGRESSION.md  WSL2.md  e2e-test-capture.md  pr-transparency-template.md  productization-plan.md  security-gates.md  soc2-alignment.md  web-api.md  web-feature-parity-status.md  web-security.md  web-testing.md
docs/changes/: 014-upstream-sync-security-gates.md  015-runtime-secret-bootstrap.md  017-e2e-deployment-evidence-capture.md  018-webui-init-python-runtime.md  019-orchestrator-user-directive-comment.md
docs/discord-control-bot/: README.md  actions-findings-export.md  admin-guide.md  api-adapter-contract.md  development-standards.md  feature-priority.md  local-health-status-test.md  project-status.md  roadmap.md  security-gates.md  setup-guide.md  soc2-control-matrix.md  user-guide.md
docs/security/: addon-provenance.md  admin-safe-defaults.md  browser-session-headers.md  console-restart-validation.md  container-hardening-defaults.md  destructive-sql-guardrails.md  generated-command-auth-token.md  generated-db-passwords.md  http-dos-limits.md  hygiene-rollup.md  login-rate-limit-defense.md  rmq-management-localhost.md  rmq-tls-verification-mode.md
orchestrator/: Dockerfile  dune_orchestrator.py
runtime/defaults/: UserEngine.ini  UserGame.ini
runtime/metrics/: prometheus.yml
runtime/scripts/: admin-tools.sh  autoscaler-control.sh  autoscaler.sh  bootstrap-runtime-secrets.sh  config.sh  console.sh  db-manager.sh  db-orphan-audit.sh  db-passwords.sh  db-utils-run.sh  db.sh  deepdesert.sh  doctor.sh  dune  ensure-public-ip.sh  extract-partition-catalog.sh  extract-server-catalog.sh  generate-world-partitions-sql.sh  host-latency-tune.sh  host-paths.sh  init-database.sh  init.sh  ip-change-restart.sh  local-loopback-optimize.sh  manager.sh  map-modes.sh  memory.sh  metrics-stack.sh  metrics-status.sh  network-addresses.sh  ping-diagnostics.sh  publish-deepdesert-overrides.sh  publish-deepdesert-state.sh  publish-network-server-state-overrides.sh  publish-sietch-overrides.sh  ready.sh  ready.sh.bak-live-fls-ready-check-20260521-155704  recycle-world-game-servers.sh  repair-chat-exchanges.sh  repair-docker-socket-access.sh  (+30 more)
runtime/tests/: capture-regression-output.sh  test-autoscaler-docker-socket-group.sh  test-autoscaler-generated-dir.sh  test-command-auth-token.sh  test-db-passwords.sh  test-docker-socket-access.sh  test-file-hygiene.sh  test-rmq-management-localhost.sh  test-rmq-port-config.sh  test-rmq-tls-mode.sh  test-secrets-bootstrap.sh  test-update-check-terminal-output.sh  test-world-partition-self-heal.sh
scripts/: create-upstream-prs.sh  ensure-security-runtimes.sh  export-github-actions-findings.mjs  generate-security-evidence-bundle.mjs  generate-vulnerability-report.mjs  soc2-readiness-check.mjs  sync-stride-issues.mjs  validate-security-automation.mjs
tests/: metrics-stack-unit.sh
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
(+73 files in other folders)
