#!/usr/bin/env bash
set -euo pipefail

cd "$(dirname "$0")/../.."

cmd="${1:-help}"
target="${2:-}"

auto_repair_stack_git_state() {
  local version tag_commit head backup_dir remote

  [ "${DUNE_SKIP_STACK_GIT_REPAIR:-0}" != "1" ] || return 0
  [ -f VERSION ] || return 0
  command -v git >/dev/null 2>&1 || return 0
  git rev-parse --is-inside-work-tree >/dev/null 2>&1 || return 0
  remote="$(git remote get-url origin 2>/dev/null || true)"
  [ -n "$remote" ] || return 0

  version="$(tr -d '[:space:]' < VERSION)"
  case "$version" in
    v*) ;;
    *) return 0 ;;
  esac
  [ -n "$(git status --porcelain -- VERSION 2>/dev/null || true)" ] || return 0

  head="$(git rev-parse HEAD 2>/dev/null || true)"
  tag_commit="$(git rev-parse -q --verify "refs/tags/${version}^{commit}" 2>/dev/null || true)"
  if [ -z "$tag_commit" ]; then
    git fetch --force --tags origin >/dev/null 2>&1 || return 0
    git fetch --force origin "refs/tags/${version}:refs/tags/${version}" >/dev/null 2>&1 || true
    tag_commit="$(git rev-parse -q --verify "refs/tags/${version}^{commit}" 2>/dev/null || true)"
  fi
  [ -n "$tag_commit" ] || return 0
  [ "$head" != "$tag_commit" ] || return 0

  echo "Stack Git state does not match installed VERSION ${version}."
  echo "Repairing Git checkout so future stack updates track the correct release."
  backup_dir="runtime/backups/self-update/git-state-repair-$(date +%Y%m%d-%H%M%S)-${version#v}"
  mkdir -p "$backup_dir"
  tar -czf "$backup_dir/project-files.tgz" \
    --exclude='./.git' \
    --exclude='./.env' \
    --exclude='./runtime/generated' \
    --exclude='./runtime/secrets' \
    --exclude='./runtime/backups' \
    --exclude='./runtime/game' \
    --exclude='./work' \
    . 2>/dev/null || true
  echo "Current stack files backup:"
  echo "  $backup_dir/project-files.tgz"
  git reset --hard "$tag_commit"
  echo "Stack Git state repaired to ${version}."
}

case "$cmd" in
  init|help|--help|-h) ;;
  *) auto_repair_stack_git_state ;;
esac

case "$cmd" in
  init)
    runtime/scripts/init.sh
    ;;

  manager|menu)
    runtime/scripts/manager.sh
    ;;

  start)
    rm -f runtime/generated/manual-stop.env
    DUNE_IGNORE_MANUAL_STOP=1 runtime/scripts/start-all.sh
    ;;

  stop)
    DUNE_MANUAL_STOP=1 runtime/scripts/stop-all.sh
    ;;

  status)
    runtime/scripts/status.sh
    ;;

  ps)
    docker ps --filter "name=dune-" --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
    ;;

  servers)
    runtime/scripts/servers.sh
    ;;

  spawn)
    shift
    runtime/scripts/spawn-server.sh "$@"
    ;;

  despawn)
    shift
    runtime/scripts/despawn-server.sh "$@"
    ;;

  autoscaler)
    shift || true
    if [ "$#" -eq 0 ]; then
      runtime/scripts/autoscaler.sh
    else
      runtime/scripts/autoscaler-control.sh "$@"
    fi
    ;;

  ports)
    runtime/scripts/ports.sh
    ;;

  ping|ping-diagnostics)
    runtime/scripts/ping-diagnostics.sh
    ;;

  ready)
    runtime/scripts/ready.sh
    ;;

  logs)
    shift || true
    runtime/scripts/logs.sh "$@"
    ;;

  restart)
    case "$target" in
      survival|survival-1)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-survival-1.sh
        runtime/scripts/publish-sietch-overrides.sh restart || true
        runtime/scripts/publish-sietch-overrides.sh once || true
        (
          exec runtime/scripts/deferred-reconcile.sh
        ) >/tmp/dune-deferred-reconcile.log 2>&1 &
        ;;
      overmap)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-overmap.sh
        ;;
      gateway|sgw)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-gateway.sh
        runtime/scripts/publish-sietch-overrides.sh once || true
        ;;
      director|bgd)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-director.sh
        ;;
      text-router|tr)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-text-router.sh
        ;;
      "")
        echo "Usage: runtime/scripts/dune restart <survival|overmap|gateway|director|text-router>"
        exit 1
        ;;
      *)
        echo "Unknown restart target: $target"
        exit 1
        ;;
    esac
    ;;

  update)
    shift || true
    set -a
    [ -f .env ] && . ./.env
    set +a
    runtime/scripts/update.sh "$@"
    ;;

  self-update|stack-update)
    shift || true
    runtime/scripts/self-update.sh "$@"
    ;;

  restart-schedule)
    shift || true
    runtime/scripts/restart-schedule.sh "$@"
    ;;

  version)
    runtime/scripts/version.sh
    ;;

  doctor)
    runtime/scripts/doctor.sh
    ;;

  db)
    shift || true
    runtime/scripts/db.sh "$@"
    ;;

  db-manage|database)
    shift || true
    runtime/scripts/db-manager.sh "$@"
    ;;

  config|server)
    shift || true
    runtime/scripts/config.sh "$@"
    ;;

  memory)
    shift || true
    runtime/scripts/memory.sh "$@"
    ;;

  sietches)
    shift || true
    runtime/scripts/sietches.sh "$@"
    ;;

  maps)
    shift || true
    runtime/scripts/map-modes.sh "$@"
    ;;

  deepdesert)
    shift || true
    runtime/scripts/deepdesert.sh "$@"
    ;;

  admin)
    shift || true
    runtime/scripts/admin-tools.sh "$@"
    ;;

  help|--help|-h)
    cat <<'EOF'
Usage:
  runtime/scripts/dune init
  runtime/scripts/dune manager
  runtime/scripts/dune start
  runtime/scripts/dune stop
  runtime/scripts/dune status
  runtime/scripts/dune version
  runtime/scripts/dune doctor
  runtime/scripts/dune ps
  runtime/scripts/dune servers
  runtime/scripts/dune spawn <map-name|partition-id>
  runtime/scripts/dune despawn <map-name|partition-id|container-name>
  runtime/scripts/dune autoscaler [status|start|stop|restart|logs|run]
  runtime/scripts/dune ports
  runtime/scripts/dune ping
  runtime/scripts/dune ready
  runtime/scripts/dune logs <service> [--raw]
  runtime/scripts/dune restart <service>
  runtime/scripts/dune update [check|auto enable|auto disable|auto status|--yes]
  runtime/scripts/dune self-update [check|list|install [latest|previous|<tag>]]
  runtime/scripts/dune restart-schedule [enable <HH:MM> [notify-minutes]|disable|status]
  runtime/scripts/dune db backup [output-dir]
  runtime/scripts/dune db list
  runtime/scripts/dune db status
  runtime/scripts/dune db health
  runtime/scripts/dune db import <backup-file>
  runtime/scripts/dune db restore <backup-file>
  runtime/scripts/dune db delete <backup-file>
  runtime/scripts/dune db delete --all
  runtime/scripts/dune db auto enable <HH:MM> [retention-days]
  runtime/scripts/dune db auto disable
  runtime/scripts/dune db auto status
  runtime/scripts/dune db auto retention <days>
  runtime/scripts/dune db auto retention off
  runtime/scripts/dune db transfer [--dry-run] [--yes] [--no-backup] <old-fls-id> <new-fls-id>
  runtime/scripts/dune db transfer --file <plan.tsv> [--dry-run] [--yes]
  runtime/scripts/dune db transfer pending|apply-pending|clear-pending
  runtime/scripts/dune database [status|schemas|tables|counts|columns|preview|sql|export]
  runtime/scripts/dune maps list
  runtime/scripts/dune maps mode [map]
  runtime/scripts/dune maps set <map> <dynamic|always-on>
  runtime/scripts/dune maps reconcile
  runtime/scripts/dune deepdesert dual [status|enable|disable|bootstrap|repair]
  runtime/scripts/dune config title ["New Server Name"]
  runtime/scripts/dune memory status
  runtime/scripts/dune memory list-maps
  runtime/scripts/dune memory set <map-name> <memory>
  runtime/scripts/dune memory unset <map-name>
  runtime/scripts/dune memory set default <memory>
  runtime/scripts/dune memory unset default
  runtime/scripts/dune sietches [list|show <map-name>|dimensions <map-name>]
  runtime/scripts/dune sietches set-max <map-name> <count>
  runtime/scripts/dune sietches set-active <map-name> <count>
  runtime/scripts/dune sietches set-display <partition-id> <display-name>
  runtime/scripts/dune sietches set-password <partition-id> [password]
  runtime/scripts/dune sietches sync
  runtime/scripts/dune sietches validate
  runtime/scripts/dune admin item-search <query>
  runtime/scripts/dune admin players [--online] [--show-full-ids]
  runtime/scripts/dune admin kick <player-fls-id> [--dry-run] [--yes] [--force] [--label <name>]
  runtime/scripts/dune admin kick --all-online [--yes] [--dry-run]
  runtime/scripts/dune admin item-list [category]
  runtime/scripts/dune admin grant-item <player-id|*> <item-name> [quantity] [durability]
  runtime/scripts/dune admin grant-item-id <player-id|*> <item-id> [quantity] [durability]
  runtime/scripts/dune admin grant-template <player-id|*> scout-ornithopter-mk6
  runtime/scripts/dune admin player-location <player-id>
  runtime/scripts/dune admin award-xp <player-id|*> <amount>
  runtime/scripts/dune admin skill-points <player-id|*> <points>
  runtime/scripts/dune admin skill-module <player-id|*> <module> <level>
  runtime/scripts/dune admin skill-modules [query]
  runtime/scripts/dune admin specialization-xp <character-name> (--all|--track <track>) [--level <level>] [--xp <xp>] [--grant-keystones] [--unlock-faction <Atreides|Harkonnen>] [--dry-run] [--yes] [--actor-id <id>]
  runtime/scripts/dune admin specialization-max <character-name> [--grant-keystones] [--unlock-faction <Atreides|Harkonnen>] [--dry-run] [--yes]
  runtime/scripts/dune admin refill-water <player-id|*> [amount]
  runtime/scripts/dune admin clean-inventory <player-id|*>
  runtime/scripts/dune admin reset-progression <player-id|*>
  runtime/scripts/dune admin teleport <player-id> <x> <y> <z> [yaw]
  runtime/scripts/dune admin spawn-vehicle <player-id> <vehicle-id> <template-name> [offset-units]
  runtime/scripts/dune admin spawn-vehicle-at <player-id> <vehicle-id> <template-name> <x> <y> <z> [rotation]
  runtime/scripts/dune admin broadcast-restart-warning <minutes>
  runtime/scripts/dune admin vehicle-list
  runtime/scripts/dune admin unsupported
  runtime/scripts/dune admin history

Services for logs/restart:
  postgres
  rmq-admin
  rmq-game
  text-router | tr
  director    | bgd
  gateway     | sgw
  survival    | survival-1
  overmap
EOF
    ;;

  *)
    echo "Unknown command: $cmd"
    echo "Run: runtime/scripts/dune help"
    exit 1
    ;;
esac
