#!/usr/bin/env bash
set -euo pipefail

cd "$(dirname "$0")/../.."

cmd="${1:-help}"
target="${2:-}"

auto_repair_stack_git_state() {
  local version tag_commit head backup_dir remote

  [ "${DUNE_SKIP_STACK_GIT_REPAIR:-0}" != "1" ] || return 0
  [ -f VERSION ] || return 0
  command -v git >/dev/null 2>&1 || return 0
  git rev-parse --is-inside-work-tree >/dev/null 2>&1 || return 0
  remote="$(git remote get-url origin 2>/dev/null || true)"
  [ -n "$remote" ] || return 0

  version="$(tr -d '[:space:]' < VERSION)"
  case "$version" in
    v*) ;;
    *) return 0 ;;
  esac
  [ -n "$(git status --porcelain -- VERSION 2>/dev/null || true)" ] || return 0

  head="$(git rev-parse HEAD 2>/dev/null || true)"
  tag_commit="$(git rev-parse -q --verify "refs/tags/${version}^{commit}" 2>/dev/null || true)"
  if [ -z "$tag_commit" ]; then
    git fetch --force --tags origin >/dev/null 2>&1 || return 0
    git fetch --force origin "refs/tags/${version}:refs/tags/${version}" >/dev/null 2>&1 || true
    tag_commit="$(git rev-parse -q --verify "refs/tags/${version}^{commit}" 2>/dev/null || true)"
  fi
  [ -n "$tag_commit" ] || return 0
  [ "$head" != "$tag_commit" ] || return 0

  echo "Stack Git state does not match installed VERSION ${version}."
  echo "Repairing Git checkout so future stack updates track the correct release."
  backup_dir="runtime/backups/self-update/git-state-repair-$(date +%Y%m%d-%H%M%S)-${version#v}"
  mkdir -p "$backup_dir"
  tar -czf "$backup_dir/project-files.tgz" \
    --exclude='./.git' \
    --exclude='./.env' \
    --exclude='./runtime/generated' \
    --exclude='./runtime/secrets' \
    --exclude='./runtime/backups' \
    --exclude='./runtime/game' \
    --exclude='./runtime/text-router' \
    --exclude='./work' \
    . 2>/dev/null || true
  echo "Current stack files backup:"
  echo "  $backup_dir/project-files.tgz"
  git reset --hard "$tag_commit"
  echo "Stack Git state repaired to ${version}."
}

detect_web_console_ip() {
  local ip=""
  if command -v ip >/dev/null 2>&1; then
    ip="$(ip -4 route get 1.1.1.1 2>/dev/null | awk '{ for (i=1; i<=NF; i++) if ($i == "src") { print $(i + 1); exit } }' || true)"
  fi
  if [ -z "$ip" ] && command -v hostname >/dev/null 2>&1; then
    ip="$(hostname -I 2>/dev/null | tr ' ' '\n' | grep -Ev '^(127\.|169\.254\.|172\.17\.|172\.18\.|172\.19\.|172\.2[0-9]\.|172\.3[0-1]\.)' | head -n1 || true)"
  fi
  printf '%s' "${ip:-127.0.0.1}"
}

print_web_console_url() {
  local port="${ADMIN_BIND_PORT:-}"
  if [ -z "$port" ] && [ -f .env ]; then
    port="$(awk -F= '/^ADMIN_BIND_PORT=/ {print $2; exit}' .env | tr -d '[:space:]"'\''' || true)"
  fi
  port="${port:-8088}"
  echo "Open Dune Docker Console in your browser:"
  echo "  http://$(detect_web_console_ip):$port"
}

prepare_docker_socket_gid() {
  if [ -z "${DOCKER_SOCKET_GID:-}" ] && [ -S /var/run/docker.sock ] && command -v stat >/dev/null 2>&1; then
    DOCKER_SOCKET_GID="$(stat -c '%g' /var/run/docker.sock 2>/dev/null || true)"
  fi
  export DOCKER_SOCKET_GID="${DOCKER_SOCKET_GID:-0}"
}

start_compose_service_if_available() {
  local compose_file="$1"
  local service="$2"
  local env_prefix="${3:-}"

  if [ ! -f "$compose_file" ]; then
    return 0
  fi
  if ! command -v docker >/dev/null 2>&1; then
    echo "Docker is not available; cannot start $service from $compose_file."
    return 1
  fi
  if ! docker compose -f "$compose_file" config --services 2>/dev/null | grep -qx "$service"; then
    echo "Compose service $service was not found in $compose_file."
    return 1
  fi
  if docker ps --format '{{.Names}}' | grep -qx "$service"; then
    return 0
  fi

  echo "Starting $service..."
  case "$env_prefix" in
    web)
      prepare_docker_socket_gid
      COMPOSE_PROJECT_NAME="${DUNE_COMPOSE_PROJECT_NAME:-dune-awakening-selfhost-docker}" DUNE_HOST_REPO_ROOT="${DUNE_HOST_REPO_ROOT:-$(pwd -P)}" DUNE_HOST_UID="${DUNE_HOST_UID:-$(id -u)}" DUNE_HOST_GID="${DUNE_HOST_GID:-$(id -g)}" docker compose -f "$compose_file" up -d --build "$service"
      ;;
    *)
      docker compose -f "$compose_file" up -d --build "$service"
      ;;
  esac
}

case "$cmd" in
  init|help|--help|-h) ;;
  *) auto_repair_stack_git_state ;;
esac

case "$cmd" in
  init)
    runtime/scripts/init.sh
    ;;

  manager|menu)
    cat <<'EOF'
The interactive CLI manager has moved to Dune Docker Console.

Use dune --help to see available CLI commands for automation and troubleshooting.
EOF
    if [ -f docker-compose.web.yml ] && command -v docker >/dev/null 2>&1; then
      prepare_docker_socket_gid
      service="$(docker compose -f docker-compose.web.yml config --services 2>/dev/null | grep -E '^redblink-dune-docker-console$' | head -n1 || true)"
      if [ -n "$service" ]; then
        echo
        if docker ps --format '{{.Names}}' | grep -qx redblink-dune-docker-console; then
          echo "Dune Docker Console is already running."
          print_web_console_url
        else
          echo "Starting Dune Docker Console..."
          if COMPOSE_PROJECT_NAME="${DUNE_COMPOSE_PROJECT_NAME:-dune-awakening-selfhost-docker}" DUNE_HOST_REPO_ROOT="${DUNE_HOST_REPO_ROOT:-$(pwd -P)}" DUNE_HOST_UID="${DUNE_HOST_UID:-$(id -u)}" DUNE_HOST_GID="${DUNE_HOST_GID:-$(id -g)}" docker compose -f docker-compose.web.yml up -d --build "$service"; then
            echo "Dune Docker Console is running."
            print_web_console_url
          else
            echo "Dune Docker Console could not be started automatically."
            echo "Run: DUNE_HOST_REPO_ROOT=\"\$(pwd -P)\" docker compose -f docker-compose.web.yml up -d --build redblink-dune-docker-console"
            exit 1
          fi
        fi
        if [ -f runtime/secrets/admin-web-password.txt ]; then
          echo
          echo "Use your local admin password to sign in."
        else
          echo
          echo "Run ./install.sh once if you need the first admin password shown again."
        fi
      else
        echo
        echo "Dune Docker Console service was not found in docker-compose.web.yml."
      fi
    else
      echo
      echo "Docker Compose or docker-compose.web.yml is unavailable."
      echo "Run this from the repo root after Docker is available:"
      echo "  docker compose -f docker-compose.web.yml up -d --build --force-recreate redblink-dune-docker-console"
    fi
    ;;

  start)
    rm -f runtime/generated/manual-stop.env
    start_compose_service_if_available docker-compose.yml orchestrator
    start_compose_service_if_available docker-compose.web.yml redblink-dune-docker-console web
    DUNE_IGNORE_MANUAL_STOP=1 runtime/scripts/start-all.sh
    ;;

  stop)
    DUNE_MANUAL_STOP=1 runtime/scripts/stop-all.sh
    ;;

  status)
    runtime/scripts/status.sh
    ;;

  ps)
    docker ps --filter "name=dune-" --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
    ;;

  servers)
    runtime/scripts/servers.sh
    ;;

  spawn)
    shift
    runtime/scripts/spawn-server.sh "$@"
    ;;

  despawn)
    shift
    runtime/scripts/despawn-server.sh "$@"
    ;;

  autoscaler)
    shift || true
    if [ "$#" -eq 0 ]; then
      runtime/scripts/autoscaler.sh
    else
      runtime/scripts/autoscaler-control.sh "$@"
    fi
    ;;

  ports)
    runtime/scripts/ports.sh
    ;;

  ping|ping-diagnostics)
    runtime/scripts/ping-diagnostics.sh
    ;;

  ready)
    runtime/scripts/ready.sh
    ;;

  logs)
    shift || true
    runtime/scripts/logs.sh "$@"
    ;;

  restart)
    case "$target" in
      survival|survival-1)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-survival-1.sh
        runtime/scripts/publish-sietch-overrides.sh restart || true
        runtime/scripts/publish-sietch-overrides.sh once || true
        (
          exec runtime/scripts/deferred-reconcile.sh
        ) >/tmp/dune-deferred-reconcile.log 2>&1 &
        ;;
      overmap)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-overmap.sh
        ;;
      gateway|sgw)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-gateway.sh
        runtime/scripts/publish-sietch-overrides.sh once || true
        ;;
      director|bgd)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-director.sh
        ;;
      text-router|tr)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-text-router.sh
        ;;
      "")
        echo "Usage: runtime/scripts/dune restart <survival|overmap|gateway|director|text-router>"
        exit 1
        ;;
      *)
        echo "Unknown restart target: $target"
        exit 1
        ;;
    esac
    ;;

  console|web)
    shift || true
    runtime/scripts/console.sh "$@"
    ;;

  update)
    shift || true
    set -a
    [ -f .env ] && . ./.env
    set +a
    runtime/scripts/update.sh "$@"
    ;;

  self-update|stack-update)
    shift || true
    runtime/scripts/self-update.sh "$@"
    ;;

  restart-schedule)
    shift || true
    runtime/scripts/restart-schedule.sh "$@"
    ;;

  ip-change-restart)
    shift || true
    runtime/scripts/ip-change-restart.sh "$@"
    ;;

  shutdown-protection)
    shift || true
    runtime/scripts/shutdown-protection.sh "$@"
    ;;

  version)
    runtime/scripts/version.sh
    ;;

  doctor)
    runtime/scripts/doctor.sh
    ;;

  db)
    shift || true
    runtime/scripts/db.sh "$@"
    ;;

  db-manage|database)
    shift || true
    runtime/scripts/db-manager.sh "$@"
    ;;

  config|server)
    shift || true
    runtime/scripts/config.sh "$@"
    ;;

  memory)
    shift || true
    runtime/scripts/memory.sh "$@"
    ;;

  sietches)
    shift || true
    runtime/scripts/sietches.sh "$@"
    ;;

  maps)
    shift || true
    runtime/scripts/map-modes.sh "$@"
    ;;

  deepdesert)
    shift || true
    runtime/scripts/deepdesert.sh "$@"
    ;;

  admin)
    shift || true
    runtime/scripts/admin-tools.sh "$@"
    ;;

  help|--help|-h)
    cat <<'EOF'
Usage:
  dune --help
  dune init
  dune start
  dune stop
  dune status
  dune version
  dune doctor
  dune ps
  dune servers
  dune spawn <map-name|partition-id>
  dune despawn <map-name|partition-id|container-name>
  dune autoscaler [status|start|stop|restart|logs|run]
  dune ports
  dune ping
  dune ready
  dune logs <service> [--raw]
  dune restart <service>
  dune console restart
  dune update [check|auto enable|auto disable|auto status|--yes]
  dune self-update [check|list|install [latest|<tag>]]
  dune restart-schedule [enable <HH:MM> [notify-minutes]|disable|status]
  dune ip-change-restart [enable [interval-minutes] [notify-minutes]|disable|status|check-now]
  dune shutdown-protection [enable|disable|remove|status]
  dune db backup [output-dir]
  dune db list
  dune db status
  dune db health
  dune db import <backup-file>
  dune db restore <backup-file>
  dune db delete <backup-file>
  dune db delete --all
  dune db auto enable <HH:MM> [retention-days]
  dune db auto disable
  dune db auto status
  dune db auto retention <days>
  dune db auto retention off
  dune db transfer [--dry-run] [--yes] [--no-backup] <old-fls-id> <new-fls-id>
  dune db transfer --file <plan.tsv> [--dry-run] [--yes]
  dune db transfer pending|apply-pending|clear-pending
  dune database [status|schemas|tables|counts|columns|preview|sql|export]
  dune maps list
  dune maps mode [map]
  dune maps set <map> <dynamic|always-on|overmap-active|disabled>
  dune maps reconcile
  dune deepdesert dual [status|enable|disable|bootstrap|repair]
  dune config title ["New Server Name"]
  dune memory status
  dune memory list-maps
  dune memory set <map-name> <memory>
  dune memory unset <map-name>
  dune memory set default <memory>
  dune memory unset default
  dune sietches [list|show <map-name>|dimensions <map-name>]
  dune sietches set-max <map-name> <count>
  dune sietches set-active <map-name> <count>
  dune sietches set-display <partition-id> <display-name>
  dune sietches set-password <partition-id> [password]
  dune sietches sync
  dune sietches validate
  dune admin item-search <query>
  dune admin players [--online] [--show-full-ids]
  dune admin kick <player-fls-id> [--dry-run] [--yes] [--force] [--label <name>]
  dune admin kick --all-online [--yes] [--dry-run]
  dune admin item-list [category]
  dune admin grant-item <player-id|*> <item-name> [quantity] [durability]
  dune admin grant-item-id <player-id|*> <item-id> [quantity] [durability]
  dune admin grant-template <player-id|*> scout-ornithopter-mk6
  dune admin player-location <player-id>
  dune admin award-xp <player-id|*> <amount>
  dune admin skill-points <player-id|*> <points>
  dune admin skill-module <player-id|*> <module> <level>
  dune admin skill-modules [query]
  dune admin specialization-xp <character-name> (--all|--track <track>) [--level <level>] [--xp <xp>] [--grant-keystones] [--unlock-faction <Atreides|Harkonnen>] [--dry-run] [--yes] [--actor-id <id>]
  dune admin specialization-max <character-name> [--grant-keystones] [--unlock-faction <Atreides|Harkonnen>] [--dry-run] [--yes]
  dune admin refill-water <player-id|*> [amount]
  dune admin clean-inventory <player-id|*>
  dune admin reset-progression <player-id|*>
  dune admin teleport <player-id> <x> <y> <z> [yaw]
  dune admin spawn-vehicle <player-id> <vehicle-id> <template-name> [offset-units]
  dune admin spawn-vehicle-at <player-id> <vehicle-id> <template-name> <x> <y> <z> [rotation]
  dune admin broadcast-restart-warning <minutes>
  dune admin vehicle-list
  dune admin unsupported
  dune admin history

Web admin panel:
  Use Dune Docker Console for guided server management.
  CLI commands remain available for automation, support, and troubleshooting.

Services for logs/restart:
  postgres
  rmq-admin
  rmq-game
  text-router | tr
  director    | bgd
  gateway     | sgw
  survival    | survival-1
  overmap
EOF
    ;;

  *)
    echo "Unknown command: $cmd"
    echo "Run: dune --help"
    exit 1
    ;;
esac
